Fix 100vh height overflowing

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,7 @@
 @import './base.css';
 
 header {
-  margin-bottom: 30px;
-  margin-top: 30px;
+  padding: 30px 0 30px 0;
   width: 100%;
 }
 
